--- a/CatalogoWeb/CatalogoWeb.csproj
+++ b/CatalogoWeb/CatalogoWeb.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Favoritos.aspx.designer.cs">
       <DependentUpon>Favoritos.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Helper.cs" />
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
